--- a/main.html
+++ b/main.html
@@ -3,14 +3,26 @@
 <html>
 
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
+    <form method="post" action="">
+        <label for="name">Name</label><br>
+        <input type="text" id="name" name="name"  minlength="3" maxlength="50" required ><br>      
+        <label for="url">Portfolio</label>
+        <input type="url" id="url" name="url" required><br>
+
+        <label for="color">Date of Purchase</label>
+        <input type="text" id="fab" name="color" required><br>
+
+        <label for="vol">Volume (between 0 and 50):</label>
+  <input type="range" id="vol" name="vol" min="1" max="100"><br>
+
+        <br><button type="submit" value="submit">submit</button>
+    </form>
+    <!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
-</script>
+    </script>
 
 </body>
-
-</html>
