--- a/main.html
+++ b/main.html
@@ -11,8 +11,8 @@
 		<p>Feedback Form</p>
         <label for="name">Name</label><br>
         <input type="text" id="name" name="name"  minlength="3" maxlength="50" required ><br>      
-        <label for="url">Portfolio</label>
-        <input type="url" id="url" name="url" required><br>
+        <label for="portfolio">Portfolio</label>
+         <input type="url" id="portfolio" value="portfolio"><br>
 
         <label for="color">Date of Purchase</label>
         <input type="text" id="fab" name="color" required><br>
