--- a/main.html
+++ b/main.html
@@ -14,7 +14,7 @@
         <label for="portfolio">Portfolio</label>
          <input type="url" id="portfolio" value="portfolio"><br>
 
-        <label for="color">Date of Purchase</label>
+        <label for="favColor">Favorite Color</label>
         <input type="text" id="fab" name="color" required><br>
 
         <label for="vol">Volume (between 0 and 50):</label>
