--- a/main.html
+++ b/main.html
@@ -15,7 +15,7 @@
          <input type="url" id="portfolio" value="portfolio"><br>
 
         <label for="favColor">Favorite Color</label>
-        <input type="text" id="fab" name="color" required><br>
+        <input type="color" id="fab" name="color" required><br>
 
         <label for="vol">Volume (between 0 and 50):</label>
   <input type="range" id="vol" name="vol" min="1" max="100"><br>
