--- a/main.html
+++ b/main.html
@@ -13,13 +13,10 @@
         <input type="text" id="name" name="name"  minlength="3" maxlength="50" required ><br>      
         <label for="portfolio">Portfolio</label>
          <input type="url" id="portfolio" value="portfolio"><br>
-
         <label for="favColor">Favorite Color</label>
-        <input type="color" id="color" name="color" required><br>
-
+        <input type="Color" id="favColor" name="color"><br>
         <label for="vol">Volume (between 0 and 50):</label>
-  <input type="range" id="vol" name="vol" min="1" max="100"><br>
-
+        <input type="range" id="vol" name="vol" min="1" max="100"><br>
         <br><button type="submit" value="submit">submit</button>
     </form>
     <!-- the entire body must be written by student -->
