--- a/main.html
+++ b/main.html
@@ -15,8 +15,8 @@
          <input type="url" id="portfolio" value="portfolio"><br>
         <label for="favColor">Favorite Color</label>
         <input type="Color" id="favColor" name="color"><br>
-        <label for="vol">Volume (between 0 and 50):</label>
-        <input type="range" id="vol" name="vol" min="1" max="100"><br>
+        <label for="likeness">Likeness</label>
+        <input type="Range" id="likeness" name="likeness" min="1" max="100"><br>
         <br><button type="submit" value="submit">submit</button>
     </form>
     <!-- the entire body must be written by student -->
